--- a/src/CustomerRelations.MassTransit/CustomerRelations.MassTransit.csproj
+++ b/src/CustomerRelations.MassTransit/CustomerRelations.MassTransit.csproj
@@ -7,11 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9"/>
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\GetTheMessage.ServiceDefaults\GetTheMessage.ServiceDefaults.csproj" />
+      <ProjectReference Include="..\Messages\Messages.csproj" />
     </ItemGroup>
 
 </Project>
