--- a/src/Payments.Dapr/Payments.Dapr.csproj
+++ b/src/Payments.Dapr/Payments.Dapr.csproj
@@ -7,12 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="CommunityToolkit.Aspire.Hosting.Dapr" Version="9.8.0" />
         <PackageReference Include="Dapr.AspNetCore" Version="1.16.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9"/>
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\GetTheMessage.ServiceDefaults\GetTheMessage.ServiceDefaults.csproj" />
+      <ProjectReference Include="..\Messages\Messages.csproj" />
     </ItemGroup>
 
 </Project>
