--- a/src/MassTransit/Billing.MassTransit/Billing.MassTransit.csproj
+++ b/src/MassTransit/Billing.MassTransit/Billing.MassTransit.csproj
@@ -7,7 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.10" />
+        <PackageReference Include="MassTransit" Version="8.5.5" />
+        <PackageReference Include="MassTransit.Azure.ServiceBus.Core" Version="8.5.5" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\..\GetTheMessage.ServiceDefaults\GetTheMessage.ServiceDefaults.csproj" />
+        <ProjectReference Include="..\..\Messages\Messages.csproj" />
     </ItemGroup>
 
 </Project>
