--- a/src/Wolverine/Billing.Wolverine/Billing.Wolverine.csproj
+++ b/src/Wolverine/Billing.Wolverine/Billing.Wolverine.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <RootNamespace>Shipping</RootNamespace>
+        <RootNamespace>Billing</RootNamespace>
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
@@ -11,12 +11,12 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
         <PackageReference Include="WolverineFx" Version="5.0.0" />
         <PackageReference Include="WolverineFx.AzureServiceBus" Version="5.0.0" />
+        <PackageReference Include="WolverineFx.Http" Version="5.0.0" />
         <PackageReference Include="WolverineFx.SqlServer" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\GetTheMessage.ServiceDefaults\GetTheMessage.ServiceDefaults.csproj" />
-      <ProjectReference Include="..\..\Messages\Messages.csproj" />
+        <ProjectReference Include="..\..\GetTheMessage.ServiceDefaults\GetTheMessage.ServiceDefaults.csproj" />
+        <ProjectReference Include="..\..\Messages\Messages.csproj" />
     </ItemGroup>
-
 </Project>
