--- a/src/Wolverine/Sales.Wolverine/Sales.Wolverine.csproj
+++ b/src/Wolverine/Sales.Wolverine/Sales.Wolverine.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <RootNamespace>Shipping</RootNamespace>
+        <RootNamespace>Sales</RootNamespace>
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
@@ -15,8 +15,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\GetTheMessage.ServiceDefaults\GetTheMessage.ServiceDefaults.csproj" />
-      <ProjectReference Include="..\..\Messages\Messages.csproj" />
+        <ProjectReference Include="..\..\CustomerServiceAgent\CustomerServiceAgent.csproj" />
+        <ProjectReference Include="..\..\GetTheMessage.ServiceDefaults\GetTheMessage.ServiceDefaults.csproj" />
+        <ProjectReference Include="..\..\Messages\Messages.csproj" />
     </ItemGroup>
-
 </Project>
