--- a/src/Dapr/Sales.Dapr/Sales.Dapr.csproj
+++ b/src/Dapr/Sales.Dapr/Sales.Dapr.csproj
@@ -1,14 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
+        <RootNamespace>Sales</RootNamespace>
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="CommunityToolkit.Aspire.Hosting.Dapr" Version="9.8.0" />
+        <PackageReference Include="Dapr.Actors.AspNetCore" Version="1.16.0" />
         <PackageReference Include="Dapr.AspNetCore" Version="1.16.0" />
+        <PackageReference Include="Dapr.Messaging" Version="1.16.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
     </ItemGroup>
 
