--- a/src/Wolverine/Sales.Wolverine/Sales.Wolverine.csproj
+++ b/src/Wolverine/Sales.Wolverine/Sales.Wolverine.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
         <PackageReference Include="WolverineFx" Version="5.0.0" />
         <PackageReference Include="WolverineFx.AzureServiceBus" Version="5.0.0" />
+        <PackageReference Include="WolverineFx.Http" Version="5.0.0" />
         <PackageReference Include="WolverineFx.SqlServer" Version="5.0.0" />
     </ItemGroup>
 
