--- a/src/NServiceBus/Conventions/Conventions.csproj
+++ b/src/NServiceBus/Conventions/Conventions.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
       <PackageReference Include="NServiceBus" Version="9.2.7" />
+      <PackageReference Include="NServiceBus.Heartbeat" Version="5.0.1" />
+      <PackageReference Include="NServiceBus.ServicePlatform.Connector" Version="3.0.2" />
     </ItemGroup>
 
 </Project>
