--- a/src/StorageQueues/appsettings.json
+++ b/src/StorageQueues/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "azurestorage": "UseDevelopmentStorage=true;"
-  }
+  "AllowedHosts": "*"
 }
